<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextBlack333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="@string/id_card_certification_phone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_id_card_certification_phone"
                style="@style/EditTextDefaultTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="112dp"
                android:hint="@string/id_card_certification_please_input_phone"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="@dimen/sp16"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/commonLineColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextBlack333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="@string/id_card_certification_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_id_card_certification_name"
                style="@style/EditTextDefaultTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="112dp"
                android:layout_marginLeft="112dp"
                android:hint="@string/id_card_certification_please_input_name"
                android:maxLines="1"
                android:textSize="@dimen/sp16"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/commonLineColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextBlack333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:text="@string/id_card_certification_id_card_number"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_id_card_certification_id_card_number"
                style="@style/EditTextDefaultTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="112dp"
                android:layout_marginLeft="112dp"
                android:hint="@string/id_card_certification_please_input_id_card_number"
                android:maxLines="1"
                android:textSize="@dimen/sp16"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/commonLineColor" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_et_id_card_certification_commit"
        style="@style/ButtonGreen29AC3E"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/determine"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>