<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_top_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp_14"
            android:paddingTop="@dimen/dp_6"
            android:paddingRight="@dimen/dp_14"
            android:paddingBottom="@dimen/dp_6"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_search_cancel"
                android:background="@drawable/bg_search_input">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/ic_search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/ic_search" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/ic_search_delete"
                    android:layout_toRightOf="@+id/ic_search_icon"
                    android:background="@color/transparent"
                    android:hint="@string/please_input_job_name"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/blackC0C0C0"
                    android:textSize="@dimen/sp14"

                    />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/ic_search_delete"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/ic_delete"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_search_cancel"
                style="@style/TextBlack333333Size_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="@string/cancel"
                android:textColor="@color/green29AC3E"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf">

        <TextView
            style="@style/TextBlack333333Size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/search_history"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/ic_search_history_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:src="@mipmap/ic_search_history_delete"
            tools:ignore="ContentDescription" />

        <cn.xzj.agent.widget.TagCloudLayout
            android:id="@+id/tcl_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_search_history_delete"
            android:layout_margin="14dp"
            app:lineSpacing="14dp"
            app:tagSpacing="14dp">

        </cn.xzj.agent.widget.TagCloudLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_quick_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/llCompanyJobParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/commonLineColor" />
        <cn.xzj.agent.widget.DropDownTabLayout
            android:id="@+id/dropDownTabLayoutCompanyJob"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:orientation="horizontal">

        </cn.xzj.agent.widget.DropDownTabLayout>

        <View
            android:id="@+id/viewTabLayoutCompanyJob"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/commonLineColor" />

        <com.scwang.smartrefresh.layout.SmartRefreshLayout

            android:id="@+id/smartRefreshLayoutCompanyJob"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ye.widget.StatusLayout
                android:id="@+id/statusLayoutCompanyJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewCompanyJob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </com.ye.widget.StatusLayout>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>
</LinearLayout>